--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -52,7 +52,7 @@
                 <h5>产品型号</h5>
 				<p>AMAX-TC1</p>
                 <ul class="actions">
-                    <li><a href="#" class="button alt">详情</a></li>
+                    <li><a href="/detail" class="button alt">详情</a></li>
                 </ul>
             </section>
 
@@ -65,30 +65,11 @@
                 <h5>产品型号</h5>
                 <p>AMAX-TC2</p>
 				<ul class="actions">
-                    <li><a href="#" class="button alt">详情</a></li>
+                    <li><a href="/detail" class="button alt">详情</a></li>
                 </ul>
             </section>
 
         </div>
     </div>
-
-</section>
-
-<!-- CTA -->
-<section id="cta">
-
-    <h2>Sign up for beta access</h2>
-    <p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc.</p>
-
-    <form>
-        <div class="row uniform 50%">
-            <div class="8u 12u(mobilep)">
-                <input type="email" name="email" id="email" placeholder="Email Address" />
-            </div>
-            <div class="4u 12u(mobilep)">
-                <input type="submit" value="Sign Up" class="fit" />
-            </div>
-        </div>
-    </form>
 
 </section>
