--- a/templates/views/layouts/default.hbs
+++ b/templates/views/layouts/default.hbs
@@ -31,9 +31,9 @@
 					<h1><a href="/">Amwares</a></h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="/">Home</a></li>
+							<li><a href="/">主页</a></li>
 							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
+								<a href="#" class="icon fa-angle-down">更多</a>
 								<ul>
 									{{# each navLinks}}
 										<li {{#ifeq ../section key}}class="active"{{else}}{{/ifeq}}>
