--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -38,3 +38,14 @@
 	margin: 0;
   }
 }
+.modal{
+  margin-top:5em;
+  a{
+	text-decoration: none;
+	border-bottom:none;
+	img{
+	  width: 100%;
+	  height: 100%;
+	}
+  }
+}
