--- a/templates/views/contact.hbs
+++ b/templates/views/contact.hbs
@@ -1,44 +1,30 @@
-<div class="container">
-	<h1>联系我们</h1>
-</div>
-<div class="container">
-	<div class="row">
-		<div class="col-sm-8 col-md-6">
-			{{#if enquirySubmitted}}
-			<h3>Thanks for getting in touch.</h3>
-			{{else}}
-			<form method="post">
-				<input type="hidden" name="action" value="contact">
-				<div class="form-group {{#if validationErrors.name}}has-error{{/if}}">
-					<label>Name</label>
-					<input type="text" name="name.full"  class="form-control" value="{{formData.[name.full]}}">
-				</div>
-				<div class="form-group {{#if validationErrors.email}}has-error{{/if}}">
-					<label>Email</label>
-					<input type="email" name="email" class="form-control" value="{{formData.email}}">
-				</div>
-				<div class="form-group">
-					<label>Phone</label>
-					<input type="text" name="phone" placeholder="(optional)" class="form-control" value="{{formData.phone}}">
-				</div>
-				<div class="form-group {{#if validationErrors.enquiryType}}has-error{{/if}}">
-					<label>What are you contacting us about?</label>
-					<select name="enquiryType" class="form-control">
-						<option value="">(select one)</option>
-						{{#each enquiryTypes}}
-						<option value="{{value}}">{{label}}</option>
-						{{/each}}
-					</select>
-				</div>
-				<div class="form-group {{#if validationErrors.message}}has-error{{/if}} ">
-					<label>Message</label>
-					<textarea name="message" placeholder="Leave us a message..." rows="4" class="form-control">{{formData.message}}</textarea>
-				</div>
-				<div class="form-actions">
-					<button type="submit" class="btn btn-primary">Send</button>
-				</div>
-			</form>
-			{{/if}}
-		</div>
-	</div>
-</div>
+{{!< default}}
+<section id="banner">
+    <h2>联系我们</h2>
+    <p>告诉我们你所需要的...</p>
+</section>
+<!-- Main -->
+<section id="main" class="container 75%">
+    <div class="box">
+        <ul class="alt">
+			<li>
+                广州辂轺信息科技有限公司
+            </li>
+            <li>
+                地址：广州市天河区天河东路242号705
+            </li>
+			<li>
+                电话：+86 020 87519370
+			</li>
+			<li>
+                传真：+86 020 85262282
+			</li>
+			<li>
+                电邮：info@amwares.com
+			</li>
+			<li>
+                邮编：510630
+			</li>
+		</ul>
+    </div>
+</section>
