--- a/templates/views/gallery.hbs
+++ b/templates/views/gallery.hbs
@@ -14,10 +14,31 @@
                     <span class="image featured"><img src="{{cloudinaryUrl heroImage}}" alt="" /></span>
 			{{/if}}
                     <h3>{{name}}</h3>
-                    <ul class="actions">
-                        <li><a href="#" class="button alt">详情</a></li>
-                    </ul>
+                    <button type="button" class="btn btn-default btn-lg" data-toggle="modal" data-target=".{{_id}}">详情</button>
                 </section>
+            </div>
+			<!--Modal-->
+            <div class="modal fade {{_id}}" tabindex="-1" role="dialog" aria-labelledby="{{name}}">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                            <h4 class="modal-title">{{name}}</h4>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+							{{#each images}}
+                            	<div class="col-md-3">
+                                    <a href="{{url}}" target="_blank"><img src="{{url}}"></a>
+								</div>
+							{{/each}}
+							</div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
             </div>
 		{{/each}}
 	</div>
