--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -2925,17 +2925,16 @@
 			-ms-animation: reveal-header 0.5s;
 			animation: reveal-header 0.5s;
 		}
-
+		
 		#header.alt {
 			-moz-animation: none;
 			-webkit-animation: none;
 			-ms-animation: none;
 			animation: none;
-			background: none;
 			color: rgba(255, 255, 255, 0.75);
 			position: absolute;
 		}
-
+		
 			#header.alt nav > ul > li a:not(.button).icon:before {
 				color: rgba(255, 255, 255, 0.75);
 			}
@@ -3116,7 +3115,7 @@
 				padding: 1em 0 1.25em 0;
 			}
 
-	body.landing #main {
+	body.landing #main.isMain {
 		margin-top: -14em;
 	}
 
