--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -6,7 +6,7 @@
 </section>
 
 <!-- Main -->
-<section id="main" class="container">
+<section id="main" class="container isMain">
 
     <section class="box special">
         <header class="major">
