--- a/templates/views/post.hbs
+++ b/templates/views/post.hbs
@@ -1,13 +1,13 @@
 <div class="container">
 	<div class="row">
 		<div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-			<article>
-				<p><a href="/blog">&larr; back to the blog</a></p>
+			<article class="article">
+				<p><a href="/detail">&larr; 返回产品详情</a></p>
 				<hr>
 				<header>
 					<h1>{{data.post.title}}</h1>
 					<h5>
-						{{{categoryList data.post.categories prefix="Posted in "}}}
+						{{{categoryList data.post.categories prefix="属于分类 :"}}}
 						{{#if author.name.first}}by {{author.name.first}}{{/if}}
 					</h5>
 				</header>
